tests/neg/i7529.scala
given fooOps: [A](a: A) extended with

  @nonsense    // error: not found: nonsense
  def foo = ???